# morky

./: .dockerignore  .env  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  dev.sh  install.sh  new_migration.sh  old_build.rs  release-please-config.json  typos.toml
.github/workflows/: release-please.yml  release.yml
frontend/: deno.json  package.json  svelte.config.js
frontend/src/: app.css
frontend/src/lib/: api.js  globals.svelte.js  status.js  util.js
frontend/src/lib/components/: Confirm.svelte  EnvVarsDialog.svelte  JobsIndicator.svelte  LineChart.svelte  SearchSelect.svelte  Sidebar.svelte  StatusBadge.svelte  Toasts.svelte
frontend/src/lib/utils/: InfiniteScroll.svelte  envParser.js
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/backup/: +page.js  +page.svelte
frontend/src/routes/git-sources/: +page.js  +page.svelte  GenericSourceCard.svelte  GitSourceCard.svelte
frontend/src/routes/git-sources/github/: Card.svelte
frontend/src/routes/git-sources/github/new/: +page.svelte
frontend/src/routes/monitoring/: +page.js  +page.svelte
frontend/src/routes/projects/: +page.js  +page.svelte
frontend/src/routes/projects/[id]/: +page.js  +page.svelte
frontend/src/routes/projects/[id]/apps/[appId]/: +layout.js  +layout.svelte
frontend/src/routes/settings/: +page.js  +page.svelte
migrations/: 20260206032009_init.sql  20260222212656_create_jobs.sql  20260408205924_health_check.sql  20260410160735_port_unique.sql  20260411001656_domain_path.sql  20260412221407_deployments_port_health_env.sql  20260413113822_container_logs.sql  20260413132400_container_logs_enabled.sql  20260414211225_apps_volume_path.sql  20260415021156_drop_image_tag.sql  20260415110239_drop_jobs_unique_key.sql  20260415221215_settings_and_domains.sql  20260420194831_cleanup_settings.sql  20260424080514_proxy_ip_header.sql  20260424160548_build_log_lines.sql  20260722133803_add_unique_index_for_app_port.sql
quadlet/: morky-buildkit.volume  morky-haproxy-net.network  morky.container
src/: auto_setup.rs  cli.rs  constants.rs  globals.rs  hook.rs  http_client.rs  main.rs  session_storage.rs  settings.rs  tokio_handle.rs
src/apps/: deployments.rs  mod.rs  volume.rs
src/auth/: middlewares.rs  mod.rs
src/backup/: mod.rs
src/common/: atomic_write.rs  defer.rs  env_vars.rs  fqdn.rs  hex.rs  i_regex.rs  mod.rs  podman.rs  single_use_token.rs  ttl_map.rs
src/db/: hooks.rs  migrate.rs  mod.rs
src/deploy/: builder.rs  buildkit.rs  cancel_registry.rs  container.rs  deployment_ext.rs  dockerfile.rs  env.rs  log_broadcast.rs  mod.rs  railpack.rs  recovery.rs  shell.rs
src/deploy/jobs/: build.rs  deploy_container.rs  mod.rs  rollback.rs  start.rs  stop.rs
src/git_sources/: github.rs  mod.rs  ops.rs
src/jobs/: mod.rs  worker.rs
src/models/: cleanup_settings.rs  container_log.rs  git_source.rs  mod.rs  project.rs  session.rs  settings.rs  user.rs
src/models/app/: deployment.rs  events.rs  mod.rs  status.rs
src/monitoring/: cleanup.rs  mod.rs
src/networking/: haproxy.rs  mod.rs  routes.rs
src/projects/: mod.rs
(+7 files in other folders)
