[package]
name = "morky"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
argon2 = "0.5.3"
async-stream = "0.3.6"
bytes = "1.11.1"
chrono = { version = "0.4.44", default-features = false, features = [
  "serde",
  "std",
] }
form_urlencoded = "1.2.2"
futures-util = "0.3.32"
http = "1.4.0"
hyper = { version = "1.9.0", features = [] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
maw = { version = "0.28.0", features = ["full", "static_files_debug_embed"] }
mimalloc = "0.1.50"
num_cpus = "1.17.0"
rand = "0.10.1"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = [
  "blocking",
  "form",
  "http2",
  "json",
  "native-tls",
  "query",
] }
# we use mine till rusqlite accepts this https://github.com/rusqlite/rusqlite/pull/1803
rusqlite = { version = "0.39.0", features = [
  "bundled",
  "chrono",
  "hooks",
  "serde_json",
  "uuid"
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = { version = "3.18.0", default-features = false, features = [
  "macros",
] }
sha2 = "0.11.0"
sysinfo = "0.38.4"
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
