[package]
name = "morky"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.104", features = ["backtrace"] }
argon2 = "0.5.3"
async-stream = "0.3.6"
bytes = "1.12.1"
chrono = { version = "0.4.45", default-features = false, features = ["serde", "std"] }
form_urlencoded = "1.2.2"
futures-util = "0.3.33"
http = "1.4.2"
hyper = { version = "1.11.0", features = [] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
maw = { version = "0.30", features = ["full", "static_files_debug_embed"] }
mimalloc = "0.1.52"
nix = { version = "0.31.3", features = ["fs"] }
num_cpus = "1.17.0"
rand = "0.10.2"
regex-lite = "0.1.9"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "form", "http2", "json", "native-tls", "query"] }
rusqlite = { version = "0.40.1", features = ["bundled", "cache", "chrono", "hooks", "serde_json", "uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.151"
serde_with = { version = "3.21.0", default-features = false, features = ["macros"] }
sha2 = "0.11.0"
sysinfo = "0.39.6"
tokio = { version = "1.53.1", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.24.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
